fixed footer flexing and spacing constructing Mercuy case study page

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,7 @@ body {
   justify-content: space-between;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .nav-container {
     margin-top: 15px;
   }
@@ -80,7 +80,7 @@ body {
   transition: background 0.2s;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .nav-item-middle {
     margin-left: 20px;
   }
@@ -101,7 +101,7 @@ body {
   margin-left: 40px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .nav-item:last-child {
     margin-left: 20px;
   }
@@ -125,7 +125,7 @@ body {
   font-size: 28px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .title {
     margin-top: 60px;
     margin-bottom: 64px;
@@ -138,24 +138,6 @@ body {
   font-size: 16px;
   font-weight: 300;
   color: #555555;
-}
-
-.bottom-bar {
-  display: flex;
-  justify-content: center;
-}
-
-.icon-container {
-  max-width: 600px;
-  margin: auto;
-  padding-top: 40px;
-  padding-bottom: 24px;
-}
-
-@media (max-width: 600px) {
-  .icon-container {
-    padding-bottom: 60px;
-  }
 }
 
 .link {
@@ -257,7 +239,7 @@ body {
   background: #EEEEEE;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .project-container {
     flex-direction: column-reverse;
     padding-bottom: 24px;
@@ -270,7 +252,7 @@ body {
   text-decoration: none;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .project-text-container {
     margin-bottom: 10px;
     margin-left: 0px;
@@ -300,7 +282,7 @@ body {
   color: #555555;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .company {
     text-align: left;
   }
@@ -315,15 +297,30 @@ body {
   margin: auto;
   text-align: center;
   max-width: 600px;
-  padding-top: 12px;
-  padding-bottom: 60px;
+  padding-bottom: 64px;
   font-size: 12px;
   color: #555555
 }
 
-@media (max-width: 600px) {
-  .footer-text {
-    padding-top: 0;
+.footer-container {
+  display: flex; 
+  flex-direction: row;
+  max-width: 600px;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 48px;
+  margin-bottom: 32px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (max-width: 500px) {
+  .footer-container {
+    gap: 32px;
+    margin-top: 24px;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 /************************************************************************/
@@ -369,30 +366,49 @@ body {
 .h1 {
   font-size: 32px;
   font-weight: 400;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 
 .h2 {
   font-size: 24px;
   font-weight: 400;
-  padding-bottom: 24px;
+  padding-bottom: 32px;
 }
 
 .h3 {
   font-size: 24px;
   font-weight: 400;
-  padding-bottom: 16px;
+  padding-bottom: 24px;
 }
 
 .text {
   font-size: 16px;
-  font-weight: 400;
-  padding-bottom: 8px;
+  font-weight: 300;
+  margin-bottom: 12px;
 }
 
 .callout {
   background: #EEEEEE;
   border-radius: 8px;
 }
+
+.cs-image-container {
+  max-width: 600px;
+  margin: 0 auto;
+  background: #F3F3F3;
+  border-radius: 8px;
+}
+
+.cs-image-container img {
+  flex: 1;
+  padding-top: 40px;
+  max-width: 80%;
+  display: block;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 /************************************************************************/
 /* case study styles */
